update the ml-report date to align with time zone and correct li color format

--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -1068,4 +1068,5 @@ th, td {
 
 .list_indent {
   padding-left: 40px; /* Adjust the indentation as needed */
+  color: #8b8b8b;
 }
